--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,8 @@
+@import '@carbon/themes/scss/themes';
+
+// Use the gray 90 theme
+@include carbon--theme($carbon--theme--g90);
+
 .App {
   text-align: center;
 }
